--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Hooozer
-description:      Daft Punk::Daft Me
+description:      Studying web-dev
 url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
 signoff:          Hooozer # Your name.
