--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Hooozer # Site's name
 description:      # About your site
-url:              http://www.hooozer.com# Site url.
+url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
 signoff:          Hooozer # Your name.
 
